--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -19,7 +19,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">MITs <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="#">New MIT</a></li>
-          <li>{{#link-to 'mits'}}View MIT's{{/link-to}}</li>
+          <li>{{#link-to 'days'}}View MIT's{{/link-to}}</li>
           <li><a href="#">Awesome other thing</a></li>
         </ul>
       </li>
