comments now on mits

--- a/app/assets/javascripts/templates/day.hbs
+++ b/app/assets/javascripts/templates/day.hbs
@@ -3,22 +3,25 @@
     <h1>MIT's <small>for {{niceDate}}</small></h1>
   </div>
   {{#each mit in mits}}
-  <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-          {{mit.title}}
-          {{#if mit.tagArray.length}}
-            {{#each tag in mit.tagArray}}
-              <span class='label label-info'>{{tag}}</span>
-            {{/each}}
-          {{/if}}
-        </h3>
-      </div>
-      {{#if mit.description.length}}
-        <div class="panel-body">
-          <p>{{mit.description}}</p>
+    {{#link-to 'mit' mit}}
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            {{mit.title}}
+            {{#if mit.tagArray.length}}
+              {{#each tag in mit.tagArray}}
+                <span class='label label-info'>{{tag}}</span>
+              {{/each}}
+            {{/if}}
+            <small class="pull-right">{{mit.comments.length}} comments</small>
+          </h3>
         </div>
-      {{/if}}
-    </div>
-    {{/each}}
+        {{#if mit.description.length}}
+          <div class="panel-body">
+            <p>{{mit.description}}</p>
+          </div>
+        {{/if}}
+      </div>
+    {{/link-to}}
+  {{/each}}
 </div>
