--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2,7 +2,24 @@
   h1, .page-header {
     margin-top: 0;
   }
+  a:hover{
+    text-decoration: none;
+  }
   .label{
     margin: 0 0.25em;
+  }
+  .panel{
+    small{
+      color: white;
+    }
+  }
+}
+
+.mit{
+  .label{
+    margin: 0 0.25em;
+  }
+  h1, .page-header {
+    margin-top: 0;
   }
 }
