--- a/app/assets/javascripts/templates/day.hbs
+++ b/app/assets/javascripts/templates/day.hbs
@@ -1,27 +1,32 @@
-<div class="day-mits">
-  <div class="page-header">
-    <h1>MIT's <small>for {{niceDate}}</small></h1>
-  </div>
-  {{#each mit in mits}}
-    {{#link-to 'mit' mit}}
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">
-            {{mit.title}}
-            {{#if mit.tagArray.length}}
-              {{#each tag in mit.tagArray}}
-                <span class='label label-info'>{{tag}}</span>
-              {{/each}}
-            {{/if}}
-            <small class="pull-right">{{mit.comments.length}} comments</small>
-          </h3>
-        </div>
-        {{#if mit.description.length}}
-          <div class="panel-body">
-            <p>{{mit.description}}</p>
+{{!-- {{#if dayMitsShowing}} --}}
+  <div class="day-mits">
+    <div class="page-header">
+      <h1>MIT's <small>for {{niceDate}}</small></h1>
+    </div>
+    {{#each mit in mits}}
+      {{#link-to 'mit' mit}}
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+              {{mit.title}}
+              {{#if mit.tagArray.length}}
+                {{#each tag in mit.tagArray}}
+                  <span class='label label-info'>{{tag}}</span>
+                {{/each}}
+              {{/if}}
+              <small class="pull-right">{{mit.comments.length}} comments</small>
+            </h3>
           </div>
-        {{/if}}
-      </div>
-    {{/link-to}}
-  {{/each}}
-</div>
+          {{#if mit.description.length}}
+            <div class="panel-body">
+              <p>{{mit.description}}</p>
+            </div>
+          {{/if}}
+        </div>
+      {{/link-to}}
+    {{/each}}
+  </div>
+{{!-- {{else}} --}}
+  {{outlet}}
+{{!-- {{/if}} --}}
+
