saving for mits

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -23,6 +23,7 @@
           <li><a href="#">Awesome other thing</a></li>
         </ul>
       </li>
+      <li>{{#link-to 'mits.new'}}New MIT <span class='glyphicon glyphicon-plus-sign'></span>{{/link-to}}</li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
