--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -11,24 +11,31 @@
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Account</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">MITs <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li>{{#link-to 'tags'}}View Tags{{/link-to}}</li>
-          <li>{{#link-to 'mits'}}View MIT's{{/link-to}}</li>
-          <li><a href="#">Awesome other thing</a></li>
-        </ul>
-      </li>
-      <li>{{#link-to 'mits.new'}}New MIT <span class='glyphicon glyphicon-plus-sign'></span>{{/link-to}}</li>
-    </ul>
-
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Sign In</a></li>
-
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav">
+      {{#if controllers.session.isAuthenticated}}
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Account</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">MITs <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>{{#link-to 'tags'}}View Tags{{/link-to}}</li>
+              <li>{{#link-to 'mits'}}View MIT's{{/link-to}}</li>
+              <li><a href="#">Awesome other thing</a></li>
+            </ul>
+          </li>
+          <li>{{#link-to 'mits.new'}}New MIT <span class='glyphicon glyphicon-plus-sign'></span>{{/link-to}}</li>
+      {{else}}
+        {{render 'session'}}
+      {{/if}}
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {{#if controllers.session.isAuthenticated}}
+          <li><a {{action 'logout' target="controllers.session"}} href="#">Logout</a></li>
+          {{!-- {{log currentUser}} --}}
+        {{else}}
+          <li>{{#link-to 'registration.new'}}Sign Up{{/link-to}}</li>
+        {{/if}}
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
