--- a/app/assets/javascripts/templates/mit.hbs
+++ b/app/assets/javascripts/templates/mit.hbs
@@ -23,7 +23,7 @@
     <div class="comments">
       {{#each comment in comments}}
         <li class="comment">
-          <p class="author"><strong>Username</strong> - {{timeAgo comment.created_at}}</p>
+          <p class="author"><strong>{{user.username}}</strong> - {{timeAgo comment.created_at}}</p>
           <span>
             {{comment.content}}
           </span>
@@ -31,4 +31,6 @@
       {{/each}}
     </div>
   {{/if}}
+  {{#link-to 'comment'}}Add Comment <span class='glyphicon glyphicon-plus-sign'></span>{{/link-to}}
+  {{outlet}}
 </div>
