--- a/app/assets/javascripts/templates/mits.hbs
+++ b/app/assets/javascripts/templates/mits.hbs
@@ -1,7 +1,7 @@
 <div class="col-md-4">
   <div class="list-group">
   {{#each mitDays}}
-    {{#link-to 'mits.filtered' this.[0] classNames='list-group-item'}}
+    {{#link-to 'mits.index' date=this.[0] classNames='list-group-item'}}
       {{this.[0]}}
       <span class="badge">{{this.[1]}}</span>
     {{/link-to}}
