add complete mit page

--- a/app/assets/javascripts/templates/mit.hbs
+++ b/app/assets/javascripts/templates/mit.hbs
@@ -11,6 +11,11 @@
           </span>
         {{/if}}
       </small>
+      {{#if complete}}
+        <br>
+        <small>Complete <span class="glyphicon glyphicon-ok"></span></small>
+      {{/if}}
+
     </h1>
   </div>
   {{#if description}}
