--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -20,8 +20,15 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">MITs <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>{{#link-to 'tags'}}View Tags{{/link-to}}</li>
-              <li>{{#link-to 'mits'}}View MIT's{{/link-to}}</li>
+              <li>{{#link-to 'mits.index'}}View MIT's{{/link-to}}</li>
               <li><a href="#">Awesome other thing</a></li>
+            </ul>
+          </li>
+           <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>{{#link-to 'teams'}}My Teams{{/link-to}}</li>
+              <li>{{#link-to 'teams.new'}}New Team{{/link-to}}</li>
             </ul>
           </li>
           <li>{{#link-to 'mits.new'}}New MIT <span class='glyphicon glyphicon-plus-sign'></span>{{/link-to}}</li>
