--- a/app/assets/javascripts/templates/teams/new.hbs
+++ b/app/assets/javascripts/templates/teams/new.hbs
@@ -16,7 +16,7 @@
       {{/if}}
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary" {{action "save"}}>Create MIT</button>
+      <button type="submit" class="btn btn-primary" {{action "save"}}>Create Team</button>
       <a href="javascript:;" {{action 'cancel'}} class="btn btn-warning">Cancel</a>
     </div>
   </form>
