fix checking current user

--- a/app/assets/javascripts/templates/teams/new.hbs
+++ b/app/assets/javascripts/templates/teams/new.hbs
@@ -21,4 +21,8 @@
     </div>
   </form>
 </div>
+{{!-- {{#form-for team wrapper="twitter-bootstrap"}}
+  {{input name}}
+  {{input userList hint="Seperate each team member with a comma"}}
+{{/form-for}} --}}
 </div>
